# MHS-Python

./: pyproject.toml  requirements.txt
hw_1/: first.py  requirements.txt  second.py  third.py
hw_1/artifacts/: test_results.txt
hw_1/artifacts/first/: test_results.txt
hw_1/artifacts/first/test_files/: non_empty_with_tabs.txt  non_empty_with_whitespaces.txt
hw_1/artifacts/second/: test_results.txt
hw_1/artifacts/second/test_files/: 15_lines.txt  20_lines.txt  8_lines.txt
hw_1/artifacts/third/: test_results.txt
hw_1/artifacts/third/test_files/: 0_lines_2_words_8_letters.txt  1_line_2_words_8_letters.txt  3_lines_4_words_19_characters.txt
hw_2/: Dockerfile  docker-compose.yml  main.py  requirements.txt
hw_2/artifacts/: first_task.tex  repository_link.txt  second_task.tex
hw_2/latex_lib/: LICENSE.txt  README.md  pyproject.toml  setup.cfg
hw_2/latex_lib/src/gtegorsslatex/: latex_lib.py
hw_2/latex_lib/src/gtegorsslatex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hw_3/: Main.py  requirements.txt
hw_3/Matrix/: Matrix.py
hw_4/: Fibonacci.py  Integrate.py
hw_4/artifacts/: 4_1.txt
