[tool.poetry]
package-mode = false
name = "mhs-python"
version = "0.1.0"
description = ""
authors = ["GTEgorss <noartu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
setuptools = "^75.6.0"
gtegorsslatex = {version = "^1.0.1", source = "testpypi"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"
