[metadata]
name = gtegorsslatex
version = 1.0.1
author = GTEgorss
author_email = noartu@gmail.com
description = MHS-Python-HW2-LaTeX
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/GTEgorss/MHS-Python
project_urls =
    repository = https://github.com/GTEgorss/MHS-Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src